<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding ="@dimen/padding_ventana"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src ="@mipmap/ic_logo_foreground"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
            style="@style/MegaTexto"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_weight="1">
    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnCrearCuenta2"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta" />
    </LinearLayout>



    <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text ="@string/tienes_cuenta"/>


    </LinearLayout>
    <TextView
        android:id="@+id/tvInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesiòn" />
</LinearLayout>